# lootbeers

backend/: Dockerfile  LootbeersBackend.sln  LootbeersBackend.sln.DotSettings
backend/.config/: dotnet-tools.json
backend/LootbeersBackend/: LootbeersBackend.csproj  Program.cs  Startup.cs  Util.cs  appsettings.Development.json  appsettings.Production.json
backend/LootbeersBackend.Anchorgen/: LootbeersBackend.Anchorgen.csproj
backend/LootbeersBackend.Anchorgen/Idl/: lootbox_opener.json
backend/LootbeersBackend.Tests/: BusinessLogicTests.cs  LootbeersBackend.Tests.csproj  ServiceTests.cs
backend/LootbeersBackend/Actions/: LootboxActions.cs  TicketActions.cs
backend/LootbeersBackend/Controllers/: LootboxController.cs  TicketController.cs
backend/LootbeersBackend/Data/: DataContext.cs
backend/LootbeersBackend/Extensions/: StartupExtensions.cs
backend/LootbeersBackend/Migrations/: 20220917091923_Initial.Designer.cs  20220917091923_Initial.cs  20220918174604_RewardWeight.Designer.cs  20220918174604_RewardWeight.cs  20220922140308_FixProps.cs  (+6 more)
blockchain/: .gitignore  Anchor.toml  Cargo.toml  package.json
blockchain/programs/lootbox_opener/: Cargo.toml
blockchain/programs/lootbox_opener/src/: error.rs  lib.rs  logic.rs  state.rs
blockchain/programs/lootbox_opener/src/state/: accounts.rs  models.rs
blockchain/tests/: lootbox-opener.ts
frontend/: .env  Dockerfile  package.json
frontend/nginx/: default.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  animation.css  index.css  index.tsx  util.ts  win_variants.js
(+46 files in other folders)
