[package]
name = "lootbox_opener"
version = "0.1.0"
description = "Lootbeers lootbox open program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lootbox_opener"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"